--- a/package.json
+++ b/package.json
@@ -2,11 +2,42 @@
   "name": "@vulppi/kit",
   "version": "0.0.1",
   "description": "Backend kit make by Vulppi",
+  "license": "MIT",
   "author": {
     "name": "Renato Rodrigues",
     "email": "renato@vulppi.dev"
   },
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vulppi-dev/kit.git"
+  },
+  "keywords": [
+    "vulppi",
+    "backend",
+    "kit",
+    "express",
+    "typescript",
+    "esbuild",
+    "dotenv",
+    "dotenv-expand",
+    "rest",
+    "api",
+    "rest-api",
+    "api-rest",
+    "http",
+    "http-status-codes",
+    "http-status",
+    "status-codes",
+    "framework",
+    "scalable",
+    "worker",
+    "workers",
+    "worker-threads",
+    "worker-thread",
+    "thread",
+    "threads"
+  ],
   "main": "dist/lib/index.mjs",
   "module": "dist/lib/index.mjs",
   "types": "types/index.d.ts",
