--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "http-status-codes": "^2.2.0",
     "inquirer": "^9.2.7",
     "lodash": "^4.17.21",
+    "range-parser": "^1.2.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
@@ -82,6 +83,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.1",
+    "@types/range-parser": "^1.2.4",
     "@types/yargs": "^17.0.24",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
