--- a/examples/created/tsconfig.json
+++ b/examples/created/tsconfig.json
@@ -19,12 +19,6 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "allowJs": true,
-    "checkJs": false,
-    "baseUrl": "app",
-    "paths": {
-      "@vulppi/kit": [
-        "../../.."
-      ]
-    }
+    "checkJs": false
   }
 }
