--- a/examples/created/tsconfig.json
+++ b/examples/created/tsconfig.json
@@ -4,7 +4,7 @@
   ],
   "exclude": [
     "node_modules",
-    ".vulppi"
+    ".intelli-rest"
   ],
   "compilerOptions": {
     "module": "ESNext",
