--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "vp": "vulppi",
-    "dev": "vulppi dev"
+    "dev": "irest dev"
   }
 }
