paths do tsconfig

--- a/examples/starter/tsconfig.json
+++ b/examples/starter/tsconfig.json
@@ -20,11 +20,6 @@
     "emitDeclarationOnly": true,
     "allowJs": true,
     "checkJs": false,
-    "baseUrl": "app",
-    "paths": {
-      "@vulppi/intrest": [
-        "../../.."
-      ]
-    }
+    "baseUrl": "app"
   }
 }
