--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.4.0",
+  "version": "0.5.1",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -73,9 +73,11 @@
     "test:start": "uvu -r dotenv-expand/config -r esbuild-register"
   },
   "dependencies": {
+    "@esbuild-plugins/tsconfig-paths": "^0.1.2",
     "@vulppi/toolbelt": "^0.6.3",
     "busboy": "^1.6.0",
     "chalk": "^5.3.0",
+    "comment-json": "^4.2.3",
     "concat-stream": "^2.0.0",
     "cookie": "^0.5.0",
     "dotenv": "^16.3.1",
