Correção do tsconfig e do watch

--- a/examples/starter/tsconfig.json
+++ b/examples/starter/tsconfig.json
@@ -20,6 +20,11 @@
     "emitDeclarationOnly": true,
     "allowJs": true,
     "checkJs": false,
-    "baseUrl": "app"
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
   }
 }
