--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -77,12 +77,12 @@
     "@vulppi/toolbelt": "^0.6.3",
     "busboy": "^1.6.0",
     "chalk": "^5.3.0",
-    "comment-json": "^4.2.3",
     "concat-stream": "^2.0.0",
     "cookie": "^0.5.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-    "esbuild": "^0.18.12",
+    "esbuild": "^0.18.13",
+    "get-tsconfig": "^4.6.2",
     "glob": "^10.3.3",
     "http-status-codes": "^2.2.0",
     "inquirer": "^9.2.8",
