correção do template

--- a/templates/simple/tsconfig.json
+++ b/templates/simple/tsconfig.json
@@ -20,6 +20,8 @@
     "emitDeclarationOnly": true,
     "allowJs": true,
     "checkJs": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "baseUrl": "src",
     "paths": {
       "@/*": [
