--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,7 @@
     "allowJs": true,
     "checkJs": false,
     "baseUrl": "src",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
   }
 }
