--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "esbuild": "^0.18.14",
+    "fast-xml-parser": "^4.2.6",
     "get-tsconfig": "^4.6.2",
     "glob": "^10.3.3",
     "http-status-codes": "^2.2.0",
