--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -82,14 +82,16 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-    "esbuild": "^0.18.14",
+    "esbuild": "^0.18.16",
     "fast-xml-parser": "^4.2.6",
     "get-tsconfig": "^4.6.2",
     "glob": "^10.3.3",
     "http-status-codes": "^2.2.0",
     "inquirer": "^9.2.8",
     "lodash": "^4.17.21",
+    "openapi-types": "^12.1.3",
     "range-parser": "^1.2.1",
+    "ts-morph": "^19.0.0",
     "typescript": "^5.1.6",
     "yargs": "^17.7.2"
   },
@@ -99,13 +101,14 @@
     "@types/cookie": "^0.5.1",
     "@types/inquirer": "^9.0.3",
     "@types/lodash": "^4.14.195",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.4",
     "@types/range-parser": "^1.2.4",
     "@types/yargs": "^17.0.24",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5"
   },
   "peerDependencies": {
-    "@types/cookie": "^0.5.1"
+    "@types/cookie": "^0.5.1",
+    "@types/node": "^20.4.4"
   }
 }
