--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "range-parser": "^1.2.1",
     "ts-morph": "^19.0.0",
     "typescript": "^5.1.6",
+    "valibot": "^0.8.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
