--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "http-status-codes": "^2.2.0",
     "inquirer": "^9.2.8",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
     "openapi-types": "^12.1.3",
     "range-parser": "^1.2.1",
     "ts-morph": "^19.0.0",
@@ -103,6 +104,7 @@
     "@types/cookie": "^0.5.1",
     "@types/inquirer": "^9.0.3",
     "@types/lodash": "^4.14.195",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^20.4.4",
     "@types/range-parser": "^1.2.4",
     "@types/yargs": "^17.0.24",
