--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.14.1",
+  "version": "0.15.0",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -75,7 +75,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/tsconfig-paths": "^0.1.2",
-    "@types/cookie": "^0.5.1",
+    "@types/cookie": "^0.5.2",
     "@vulppi/toolbelt": "^0.6.3",
     "busboy": "^1.6.0",
     "chalk": "^5.3.0",
@@ -86,32 +86,29 @@
     "esbuild": "^0.19.2",
     "fast-xml-parser": "^4.2.7",
     "get-tsconfig": "^4.7.0",
-    "glob": "^10.3.3",
+    "glob": "^10.3.4",
     "http-status-codes": "^2.2.0",
     "inquirer": "^9.2.10",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
-    "openapi-types": "^12.1.3",
+    "ms": "^2.1.3",
     "range-parser": "^1.2.1",
-    "ts-morph": "^19.0.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "valibot": "^0.13.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.0",
     "@types/concat-stream": "^2.0.0",
-    "@types/cookie": "^0.5.1",
+    "@types/cookie": "^0.5.2",
     "@types/inquirer": "^9.0.3",
-    "@types/lodash": "^4.14.197",
+    "@types/lodash": "^4.14.198",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^20.5.4",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^20.5.9",
     "@types/range-parser": "^1.2.4",
     "@types/yargs": "^17.0.24",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5"
-  },
-  "peerDependencies": {
-    "@types/node": "^20.5.4"
   }
 }
