--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.19.2",
+  "version": "0.19.3",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -54,8 +54,7 @@
   "bin": {
     "@vulppi/intrest": "./bin/index.mjs",
     "intrest": "./bin/index.mjs",
-    "irest": "./bin/index.mjs",
-    "irst": "./bin/index.mjs"
+    "irest": "./bin/index.mjs"
   },
   "exports": {
     ".": {
@@ -81,10 +80,11 @@
     "chokidar": "^3.5.3",
     "concat-stream": "^2.0.0",
     "cookie": "^0.5.0",
+    "devcert": "^1.2.2",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-    "esbuild": "^0.19.4",
-    "fast-xml-parser": "^4.3.1",
+    "esbuild": "^0.19.5",
+    "fast-xml-parser": "^4.3.2",
     "get-tsconfig": "^4.7.2",
     "glob": "^10.3.10",
     "http-status-codes": "^2.3.0",
@@ -95,21 +95,21 @@
     "range-parser": "^1.2.1",
     "set-cookie-parser": "^2.6.0",
     "typescript": "^5.2.2",
-    "valibot": "^0.17.1",
+    "valibot": "^0.19.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/busboy": "^1.5.1",
-    "@types/concat-stream": "^2.0.0",
-    "@types/cookie": "^0.5.2",
-    "@types/inquirer": "^9.0.3",
-    "@types/lodash": "^4.14.199",
-    "@types/mime-types": "^2.1.2",
-    "@types/ms": "^0.7.32",
-    "@types/node": "^20.7.1",
-    "@types/range-parser": "^1.2.5",
-    "@types/set-cookie-parser": "^2.4.4",
-    "@types/yargs": "^17.0.25",
+    "@types/busboy": "^1.5.2",
+    "@types/concat-stream": "^2.0.1",
+    "@types/cookie": "^0.5.3",
+    "@types/inquirer": "^9.0.6",
+    "@types/lodash": "^4.14.200",
+    "@types/mime-types": "^2.1.3",
+    "@types/ms": "^0.7.33",
+    "@types/node": "^20.8.9",
+    "@types/range-parser": "^1.2.6",
+    "@types/set-cookie-parser": "^2.4.5",
+    "@types/yargs": "^17.0.29",
     "npm-run-all": "^4.1.5"
   }
 }
