--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vulppi/intrest",
-  "version": "0.19.3",
+  "version": "0.19.4",
   "description": "Backend kit make by Vulppi",
   "license": "MIT",
   "author": {
@@ -74,12 +74,12 @@
   },
   "dependencies": {
     "@esbuild-plugins/tsconfig-paths": "^0.1.2",
-    "@vulppi/toolbelt": "^0.6.3",
+    "@vulppi/toolbelt": "^0.6.5",
     "busboy": "^1.6.0",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "concat-stream": "^2.0.0",
-    "cookie": "^0.5.0",
+    "cookie": "^0.6.0",
     "devcert": "^1.2.2",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
@@ -93,23 +93,24 @@
     "mime-types": "^2.1.35",
     "ms": "^2.1.3",
     "range-parser": "^1.2.1",
+    "selfsigned": "^2.4.1",
     "set-cookie-parser": "^2.6.0",
     "typescript": "^5.2.2",
-    "valibot": "^0.19.0",
+    "valibot": "^0.20.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.2",
-    "@types/concat-stream": "^2.0.1",
-    "@types/cookie": "^0.5.3",
+    "@types/concat-stream": "^2.0.2",
+    "@types/cookie": "^0.5.4",
     "@types/inquirer": "^9.0.6",
     "@types/lodash": "^4.14.200",
-    "@types/mime-types": "^2.1.3",
-    "@types/ms": "^0.7.33",
-    "@types/node": "^20.8.9",
+    "@types/mime-types": "^2.1.4",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.8.10",
     "@types/range-parser": "^1.2.6",
     "@types/set-cookie-parser": "^2.4.5",
-    "@types/yargs": "^17.0.29",
+    "@types/yargs": "^17.0.30",
     "npm-run-all": "^4.1.5"
   }
 }
